# mailing_management

./: .env.sample  README.md  groups.json  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: sendmail.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_start_send_alter_mailing_stop_send.py  0003_alter_mailing_status.py  0004_alter_sendingattempt_date.py  0005_mailing_owner_message_owner_recipient_owner_and_more.py  0006_alter_mailing_options.py
mailing/templates/mailing/: base.html  confirm_delete.html  home.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_start.html  mailing_stop.html  message_detail.html  message_form.html  message_list.html  recipient_detail.html  recipient_form.html  recipient_list.html  sendingattempt_list.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_email.py  0004_customuser_avatar_customuser_country_and_more.py  0005_alter_customuser_email.py  0006_alter_customuser_is_active.py
users/templates/email_confirm/: email_confirmation_done.html  email_confirmation_sent.html
users/templates/password_reset/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
users/templates/registration/: login.html  register.html
users/templates/users/: customuser_form.html  customuser_list.html  profile.html
